Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -97,3 +97,4 @@ Temporary commit content 1028
 Temporary commit content 1051
 Temporary commit content 1086
 Temporary commit content 1087
+Temporary commit content 1094
