Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -27,3 +27,4 @@ Temporary commit content 285
 Temporary commit content 315
 Temporary commit content 317
 Temporary commit content 319
+Temporary commit content 355
