Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -193,3 +193,4 @@ Temporary commit content 2464
 Temporary commit content 2505
 Temporary commit content 2509
 Temporary commit content 2519
+Temporary commit content 2545
