Fixed bug in data processing script

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -220,3 +220,4 @@ Temporary commit content 2799
 Temporary commit content 2806
 Temporary commit content 2809
 Temporary commit content 2818
+Temporary commit content 2819
