Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -176,3 +176,4 @@ Temporary commit content 2229
 Temporary commit content 2232
 Temporary commit content 2252
 Temporary commit content 2262
+Temporary commit content 2291
