Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -43,3 +43,4 @@ Temporary commit content 434
 Temporary commit content 442
 Temporary commit content 487
 Temporary commit content 493
+Temporary commit content 505
