Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -163,3 +163,4 @@ Temporary commit content 1816
 Temporary commit content 1835
 Temporary commit content 1843
 Temporary commit content 1859
+Temporary commit content 1907
