--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -134,3 +134,4 @@ Temporary commit content 1712
 Temporary commit content 1722
 Temporary commit content 1727
 Temporary commit content 1746
+Temporary commit content 1767
