Updated project documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -224,3 +224,4 @@ Temporary commit content 2495
 Temporary commit content 2500
 Temporary commit content 2506
 Temporary commit content 2524
+Temporary commit content 2530
