Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -131,3 +131,4 @@ Temporary commit content 1655
 Temporary commit content 1656
 Temporary commit content 1695
 Temporary commit content 1712
+Temporary commit content 1722
