Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -99,3 +99,4 @@ Temporary commit content 1086
 Temporary commit content 1087
 Temporary commit content 1094
 Temporary commit content 1139
+Temporary commit content 1150
