Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -214,3 +214,4 @@ Temporary commit content 2399
 Temporary commit content 2400
 Temporary commit content 2402
 Temporary commit content 2420
+Temporary commit content 2428
