Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -149,3 +149,4 @@ Temporary commit content 1632
 Temporary commit content 1657
 Temporary commit content 1676
 Temporary commit content 1685
+Temporary commit content 1687
