Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -221,3 +221,4 @@ Temporary commit content 2456
 Temporary commit content 2475
 Temporary commit content 2491
 Temporary commit content 2495
+Temporary commit content 2500
