--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -41,3 +41,4 @@ Temporary commit content 439
 Temporary commit content 467
 Temporary commit content 471
 Temporary commit content 475
+Temporary commit content 482
