Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -256,3 +256,4 @@ Temporary commit content 2902
 Temporary commit content 2903
 Temporary commit content 2911
 Temporary commit content 2920
+Temporary commit content 2942
