Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -220,3 +220,4 @@ Temporary commit content 2452
 Temporary commit content 2456
 Temporary commit content 2475
 Temporary commit content 2491
+Temporary commit content 2495
