Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -215,3 +215,4 @@ Temporary commit content 2770
 Temporary commit content 2778
 Temporary commit content 2780
 Temporary commit content 2794
+Temporary commit content 2798
