Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -242,3 +242,4 @@ Temporary commit content 2676
 Temporary commit content 2699
 Temporary commit content 2722
 Temporary commit content 2736
+Temporary commit content 2742
