Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -31,3 +31,4 @@ Temporary commit content 326
 Temporary commit content 334
 Temporary commit content 335
 Temporary commit content 347
+Temporary commit content 350
