--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -148,3 +148,4 @@ Temporary commit content 1885
 Temporary commit content 1891
 Temporary commit content 1900
 Temporary commit content 1902
+Temporary commit content 1906
