Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -179,3 +179,4 @@ Temporary commit content 2262
 Temporary commit content 2291
 Temporary commit content 2301
 Temporary commit content 2318
+Temporary commit content 2345
