Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -240,3 +240,4 @@ Temporary commit content 2672
 Temporary commit content 2674
 Temporary commit content 2676
 Temporary commit content 2699
+Temporary commit content 2722
