Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -227,3 +227,4 @@ Temporary commit content 2524
 Temporary commit content 2530
 Temporary commit content 2531
 Temporary commit content 2535
+Temporary commit content 2579
