Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -71,3 +71,4 @@ Temporary commit content 764
 Temporary commit content 768
 Temporary commit content 797
 Temporary commit content 804
+Temporary commit content 806
