Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -99,3 +99,4 @@ Temporary commit content 1232
 Temporary commit content 1241
 Temporary commit content 1251
 Temporary commit content 1256
+Temporary commit content 1262
