Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -252,3 +252,4 @@ Temporary commit content 2804
 Temporary commit content 2810
 Temporary commit content 2826
 Temporary commit content 2867
+Temporary commit content 2902
