Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -228,3 +228,4 @@ Temporary commit content 2530
 Temporary commit content 2531
 Temporary commit content 2535
 Temporary commit content 2579
+Temporary commit content 2599
