Improved error handling logic

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -70,3 +70,4 @@ Temporary commit content 864
 Temporary commit content 865
 Temporary commit content 869
 Temporary commit content 888
+Temporary commit content 903
