Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -153,3 +153,4 @@ Temporary commit content 1911
 Temporary commit content 1923
 Temporary commit content 1934
 Temporary commit content 1953
+Temporary commit content 1968
