Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -116,3 +116,4 @@ Temporary commit content 1453
 Temporary commit content 1459
 Temporary commit content 1460
 Temporary commit content 1469
+Temporary commit content 1479
