Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -98,3 +98,4 @@ Temporary commit content 1231
 Temporary commit content 1232
 Temporary commit content 1241
 Temporary commit content 1251
+Temporary commit content 1256
