Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -109,3 +109,4 @@ Temporary commit content 1211
 Temporary commit content 1228
 Temporary commit content 1234
 Temporary commit content 1242
+Temporary commit content 1243
