--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -42,3 +42,4 @@ Temporary commit content 467
 Temporary commit content 471
 Temporary commit content 475
 Temporary commit content 482
+Temporary commit content 489
