Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -85,3 +85,4 @@ Temporary commit content 1000
 Temporary commit content 1035
 Temporary commit content 1042
 Temporary commit content 1049
+Temporary commit content 1065
