Improved error handling logic

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -92,3 +92,4 @@ Temporary commit content 1117
 Temporary commit content 1122
 Temporary commit content 1124
 Temporary commit content 1167
+Temporary commit content 1184
