Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -165,3 +165,4 @@ Temporary commit content 2109
 Temporary commit content 2128
 Temporary commit content 2143
 Temporary commit content 2157
+Temporary commit content 2162
