Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -221,3 +221,4 @@ Temporary commit content 2806
 Temporary commit content 2809
 Temporary commit content 2818
 Temporary commit content 2819
+Temporary commit content 2840
