Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -196,3 +196,4 @@ Temporary commit content 2519
 Temporary commit content 2545
 Temporary commit content 2567
 Temporary commit content 2584
+Temporary commit content 2610
