Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -235,3 +235,4 @@ Temporary commit content 2625
 Temporary commit content 2648
 Temporary commit content 2661
 Temporary commit content 2663
+Temporary commit content 2668
