Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -210,3 +210,4 @@ Temporary commit content 2719
 Temporary commit content 2720
 Temporary commit content 2760
 Temporary commit content 2761
+Temporary commit content 2769
