Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -29,3 +29,4 @@ Temporary commit content 317
 Temporary commit content 319
 Temporary commit content 355
 Temporary commit content 365
+Temporary commit content 379
