Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -36,3 +36,4 @@ Temporary commit content 353
 Temporary commit content 361
 Temporary commit content 366
 Temporary commit content 407
+Temporary commit content 409
