Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -186,3 +186,4 @@ Temporary commit content 2115
 Temporary commit content 2116
 Temporary commit content 2124
 Temporary commit content 2125
+Temporary commit content 2135
