Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -96,3 +96,4 @@ Temporary commit content 1015
 Temporary commit content 1028
 Temporary commit content 1051
 Temporary commit content 1086
+Temporary commit content 1087
