Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -62,3 +62,4 @@ Temporary commit content 648
 Temporary commit content 650
 Temporary commit content 678
 Temporary commit content 679
+Temporary commit content 697
