Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -171,3 +171,4 @@ Temporary commit content 2197
 Temporary commit content 2199
 Temporary commit content 2200
 Temporary commit content 2201
+Temporary commit content 2215
