Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -180,3 +180,4 @@ Temporary commit content 2019
 Temporary commit content 2038
 Temporary commit content 2077
 Temporary commit content 2082
+Temporary commit content 2093
