Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -198,3 +198,4 @@ Temporary commit content 2567
 Temporary commit content 2584
 Temporary commit content 2610
 Temporary commit content 2611
+Temporary commit content 2633
