Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -152,3 +152,4 @@ Temporary commit content 1685
 Temporary commit content 1687
 Temporary commit content 1694
 Temporary commit content 1697
+Temporary commit content 1704
