Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -172,3 +172,4 @@ Temporary commit content 2199
 Temporary commit content 2200
 Temporary commit content 2201
 Temporary commit content 2215
+Temporary commit content 2229
