Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -262,3 +262,4 @@ Temporary commit content 2976
 Temporary commit content 2979
 Temporary commit content 2990
 Temporary commit content 2994
+Temporary commit content 2996
