Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -170,3 +170,4 @@ Temporary commit content 2164
 Temporary commit content 2197
 Temporary commit content 2199
 Temporary commit content 2200
+Temporary commit content 2201
