Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -105,3 +105,4 @@ Temporary commit content 1277
 Temporary commit content 1290
 Temporary commit content 1298
 Temporary commit content 1301
+Temporary commit content 1330
