Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -83,3 +83,4 @@ Temporary commit content 987
 Temporary commit content 991
 Temporary commit content 1000
 Temporary commit content 1035
+Temporary commit content 1042
