--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -223,3 +223,4 @@ Temporary commit content 2491
 Temporary commit content 2495
 Temporary commit content 2500
 Temporary commit content 2506
+Temporary commit content 2524
