Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -192,3 +192,4 @@ Temporary commit content 2459
 Temporary commit content 2464
 Temporary commit content 2505
 Temporary commit content 2509
+Temporary commit content 2519
