Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -168,3 +168,4 @@ Temporary commit content 1908
 Temporary commit content 1916
 Temporary commit content 1927
 Temporary commit content 1928
+Temporary commit content 1957
