Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -191,3 +191,4 @@ Temporary commit content 2451
 Temporary commit content 2459
 Temporary commit content 2464
 Temporary commit content 2505
+Temporary commit content 2509
