Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -135,3 +135,4 @@ Temporary commit content 1524
 Temporary commit content 1543
 Temporary commit content 1548
 Temporary commit content 1552
+Temporary commit content 1559
