Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -218,3 +218,4 @@ Temporary commit content 2428
 Temporary commit content 2436
 Temporary commit content 2452
 Temporary commit content 2456
+Temporary commit content 2475
