Improved error handling logic

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -189,3 +189,4 @@ Temporary commit content 2435
 Temporary commit content 2440
 Temporary commit content 2451
 Temporary commit content 2459
+Temporary commit content 2464
