Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -205,3 +205,4 @@ Temporary commit content 2682
 Temporary commit content 2693
 Temporary commit content 2703
 Temporary commit content 2709
+Temporary commit content 2716
