--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -53,3 +53,4 @@ Temporary commit content 555
 Temporary commit content 558
 Temporary commit content 576
 Temporary commit content 577
+Temporary commit content 592
