Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -169,3 +169,4 @@ Temporary commit content 2162
 Temporary commit content 2164
 Temporary commit content 2197
 Temporary commit content 2199
+Temporary commit content 2200
