Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -222,3 +222,4 @@ Temporary commit content 2809
 Temporary commit content 2818
 Temporary commit content 2819
 Temporary commit content 2840
+Temporary commit content 2842
