Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -184,3 +184,4 @@ Temporary commit content 2093
 Temporary commit content 2099
 Temporary commit content 2115
 Temporary commit content 2116
+Temporary commit content 2124
