Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -207,3 +207,4 @@ Temporary commit content 2703
 Temporary commit content 2709
 Temporary commit content 2716
 Temporary commit content 2719
+Temporary commit content 2720
