Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -139,3 +139,4 @@ Temporary commit content 1772
 Temporary commit content 1773
 Temporary commit content 1777
 Temporary commit content 1784
+Temporary commit content 1793
