Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -146,3 +146,4 @@ Temporary commit content 1602
 Temporary commit content 1624
 Temporary commit content 1627
 Temporary commit content 1632
+Temporary commit content 1657
