Added initial project plan

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -178,3 +178,4 @@ Temporary commit content 2252
 Temporary commit content 2262
 Temporary commit content 2291
 Temporary commit content 2301
+Temporary commit content 2318
