Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -191,3 +191,4 @@ Temporary commit content 2146
 Temporary commit content 2149
 Temporary commit content 2151
 Temporary commit content 2166
+Temporary commit content 2177
