Improved error handling logic

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -195,3 +195,4 @@ Temporary commit content 2509
 Temporary commit content 2519
 Temporary commit content 2545
 Temporary commit content 2567
+Temporary commit content 2584
