Improved error handling logic

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -56,3 +56,4 @@ Temporary commit content 577
 Temporary commit content 592
 Temporary commit content 608
 Temporary commit content 619
+Temporary commit content 620
