Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -100,3 +100,4 @@ Temporary commit content 1241
 Temporary commit content 1251
 Temporary commit content 1256
 Temporary commit content 1262
+Temporary commit content 1273
