Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -109,3 +109,4 @@ Temporary commit content 1330
 Temporary commit content 1350
 Temporary commit content 1354
 Temporary commit content 1377
+Temporary commit content 1403
