Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -203,3 +203,4 @@ Temporary commit content 2279
 Temporary commit content 2281
 Temporary commit content 2290
 Temporary commit content 2321
+Temporary commit content 2332
