--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -114,3 +114,4 @@ Temporary commit content 1408
 Temporary commit content 1451
 Temporary commit content 1453
 Temporary commit content 1459
+Temporary commit content 1460
