Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -241,3 +241,4 @@ Temporary commit content 2674
 Temporary commit content 2676
 Temporary commit content 2699
 Temporary commit content 2722
+Temporary commit content 2736
