Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -187,3 +187,4 @@ Temporary commit content 2419
 Temporary commit content 2425
 Temporary commit content 2435
 Temporary commit content 2440
+Temporary commit content 2451
