Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -196,3 +196,4 @@ Temporary commit content 2179
 Temporary commit content 2193
 Temporary commit content 2251
 Temporary commit content 2253
+Temporary commit content 2263
