Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -67,3 +67,4 @@ Temporary commit content 733
 Temporary commit content 745
 Temporary commit content 819
 Temporary commit content 864
+Temporary commit content 865
