Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -208,3 +208,4 @@ Temporary commit content 2337
 Temporary commit content 2341
 Temporary commit content 2354
 Temporary commit content 2357
+Temporary commit content 2368
