Fixed bug in data processing script

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -64,3 +64,4 @@ Temporary commit content 678
 Temporary commit content 679
 Temporary commit content 697
 Temporary commit content 733
+Temporary commit content 745
