Updated project documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -110,3 +110,4 @@ Temporary commit content 1228
 Temporary commit content 1234
 Temporary commit content 1242
 Temporary commit content 1243
+Temporary commit content 1257
