Fixed bug in data processing script

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -58,3 +58,4 @@ Temporary commit content 608
 Temporary commit content 619
 Temporary commit content 620
 Temporary commit content 637
+Temporary commit content 648
