Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -219,3 +219,4 @@ Temporary commit content 2798
 Temporary commit content 2799
 Temporary commit content 2806
 Temporary commit content 2809
+Temporary commit content 2818
