Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -104,3 +104,4 @@ Temporary commit content 1273
 Temporary commit content 1277
 Temporary commit content 1290
 Temporary commit content 1298
+Temporary commit content 1301
