Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -137,3 +137,4 @@ Temporary commit content 1746
 Temporary commit content 1767
 Temporary commit content 1772
 Temporary commit content 1773
+Temporary commit content 1777
