Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -165,3 +165,4 @@ Temporary commit content 1843
 Temporary commit content 1859
 Temporary commit content 1907
 Temporary commit content 1908
+Temporary commit content 1916
