Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -163,3 +163,4 @@ Temporary commit content 2079
 Temporary commit content 2086
 Temporary commit content 2109
 Temporary commit content 2128
+Temporary commit content 2143
