Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -201,3 +201,4 @@ Temporary commit content 2266
 Temporary commit content 2276
 Temporary commit content 2279
 Temporary commit content 2281
+Temporary commit content 2290
