Added initial project plan

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -174,3 +174,4 @@ Temporary commit content 2201
 Temporary commit content 2215
 Temporary commit content 2229
 Temporary commit content 2232
+Temporary commit content 2252
