Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -236,3 +236,4 @@ Temporary commit content 2648
 Temporary commit content 2661
 Temporary commit content 2663
 Temporary commit content 2668
+Temporary commit content 2672
