Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -258,3 +258,4 @@ Temporary commit content 2911
 Temporary commit content 2920
 Temporary commit content 2942
 Temporary commit content 2948
+Temporary commit content 2976
