--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -211,3 +211,4 @@ Temporary commit content 2720
 Temporary commit content 2760
 Temporary commit content 2761
 Temporary commit content 2769
+Temporary commit content 2770
