Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -113,3 +113,4 @@ Temporary commit content 1243
 Temporary commit content 1257
 Temporary commit content 1270
 Temporary commit content 1309
+Temporary commit content 1373
