Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -201,3 +201,4 @@ Temporary commit content 2611
 Temporary commit content 2633
 Temporary commit content 2659
 Temporary commit content 2678
+Temporary commit content 2682
