Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -164,3 +164,4 @@ Temporary commit content 1835
 Temporary commit content 1843
 Temporary commit content 1859
 Temporary commit content 1907
+Temporary commit content 1908
