Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -133,3 +133,4 @@ Temporary commit content 1511
 Temporary commit content 1518
 Temporary commit content 1524
 Temporary commit content 1543
+Temporary commit content 1548
