Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -155,3 +155,4 @@ Temporary commit content 1934
 Temporary commit content 1953
 Temporary commit content 1968
 Temporary commit content 1971
+Temporary commit content 2001
