Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -225,3 +225,4 @@ Temporary commit content 2500
 Temporary commit content 2506
 Temporary commit content 2524
 Temporary commit content 2530
+Temporary commit content 2531
