Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -202,3 +202,4 @@ Temporary commit content 2633
 Temporary commit content 2659
 Temporary commit content 2678
 Temporary commit content 2682
+Temporary commit content 2693
