Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -76,3 +76,4 @@ Temporary commit content 815
 Temporary commit content 818
 Temporary commit content 826
 Temporary commit content 875
+Temporary commit content 877
