Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -117,3 +117,4 @@ Temporary commit content 1459
 Temporary commit content 1460
 Temporary commit content 1469
 Temporary commit content 1479
+Temporary commit content 1481
