Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -59,3 +59,4 @@ Temporary commit content 619
 Temporary commit content 620
 Temporary commit content 637
 Temporary commit content 648
+Temporary commit content 650
