Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -50,3 +50,4 @@ Temporary commit content 546
 Temporary commit content 557
 Temporary commit content 569
 Temporary commit content 575
+Temporary commit content 579
