Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -248,3 +248,4 @@ Temporary commit content 2756
 Temporary commit content 2777
 Temporary commit content 2781
 Temporary commit content 2786
+Temporary commit content 2804
