Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -107,3 +107,4 @@ Temporary commit content 1189
 Temporary commit content 1197
 Temporary commit content 1211
 Temporary commit content 1228
+Temporary commit content 1234
