Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -124,3 +124,4 @@ Temporary commit content 1531
 Temporary commit content 1541
 Temporary commit content 1554
 Temporary commit content 1615
+Temporary commit content 1621
