Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -116,3 +116,4 @@ Temporary commit content 1309
 Temporary commit content 1373
 Temporary commit content 1374
 Temporary commit content 1392
+Temporary commit content 1397
