Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -83,3 +83,4 @@ Temporary commit content 929
 Temporary commit content 930
 Temporary commit content 949
 Temporary commit content 966
+Temporary commit content 971
