Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -189,3 +189,4 @@ Temporary commit content 2125
 Temporary commit content 2135
 Temporary commit content 2146
 Temporary commit content 2149
+Temporary commit content 2151
