Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -154,3 +154,4 @@ Temporary commit content 1923
 Temporary commit content 1934
 Temporary commit content 1953
 Temporary commit content 1968
+Temporary commit content 1971
