Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -217,3 +217,4 @@ Temporary commit content 2420
 Temporary commit content 2428
 Temporary commit content 2436
 Temporary commit content 2452
+Temporary commit content 2456
