Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -181,3 +181,4 @@ Temporary commit content 2301
 Temporary commit content 2318
 Temporary commit content 2345
 Temporary commit content 2361
+Temporary commit content 2366
