Improved error handling logic

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -259,3 +259,4 @@ Temporary commit content 2920
 Temporary commit content 2942
 Temporary commit content 2948
 Temporary commit content 2976
+Temporary commit content 2979
