Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -208,3 +208,4 @@ Temporary commit content 2709
 Temporary commit content 2716
 Temporary commit content 2719
 Temporary commit content 2720
+Temporary commit content 2760
