Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -61,3 +61,4 @@ Temporary commit content 665
 Temporary commit content 672
 Temporary commit content 673
 Temporary commit content 682
+Temporary commit content 691
