Added initial project plan

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -129,3 +129,4 @@ Temporary commit content 1630
 Temporary commit content 1633
 Temporary commit content 1655
 Temporary commit content 1656
+Temporary commit content 1695
