Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -200,3 +200,4 @@ Temporary commit content 2610
 Temporary commit content 2611
 Temporary commit content 2633
 Temporary commit content 2659
+Temporary commit content 2678
