Added validation for user input

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -183,3 +183,4 @@ Temporary commit content 2082
 Temporary commit content 2093
 Temporary commit content 2099
 Temporary commit content 2115
+Temporary commit content 2116
