Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -159,3 +159,4 @@ Temporary commit content 2001
 Temporary commit content 2004
 Temporary commit content 2015
 Temporary commit content 2065
+Temporary commit content 2079
