Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -160,3 +160,4 @@ Temporary commit content 2004
 Temporary commit content 2015
 Temporary commit content 2065
 Temporary commit content 2079
+Temporary commit content 2086
