Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -112,3 +112,4 @@ Temporary commit content 1377
 Temporary commit content 1403
 Temporary commit content 1408
 Temporary commit content 1451
+Temporary commit content 1453
