Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -126,3 +126,4 @@ Temporary commit content 1554
 Temporary commit content 1615
 Temporary commit content 1621
 Temporary commit content 1630
+Temporary commit content 1633
