Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -61,3 +61,4 @@ Temporary commit content 637
 Temporary commit content 648
 Temporary commit content 650
 Temporary commit content 678
+Temporary commit content 679
