Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -141,3 +141,4 @@ Temporary commit content 1777
 Temporary commit content 1784
 Temporary commit content 1793
 Temporary commit content 1804
+Temporary commit content 1815
