Enhanced UI responsiveness

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -199,3 +199,4 @@ Temporary commit content 2584
 Temporary commit content 2610
 Temporary commit content 2611
 Temporary commit content 2633
+Temporary commit content 2659
