Added initial project plan

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -205,3 +205,4 @@ Temporary commit content 2290
 Temporary commit content 2321
 Temporary commit content 2332
 Temporary commit content 2337
+Temporary commit content 2341
