Updated project documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -238,3 +238,4 @@ Temporary commit content 2663
 Temporary commit content 2668
 Temporary commit content 2672
 Temporary commit content 2674
+Temporary commit content 2676
