Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -6,3 +6,4 @@ Temporary commit content 36
 Temporary commit content 41
 Temporary commit content 51
 Temporary commit content 109
+Temporary commit content 128
