Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -206,3 +206,4 @@ Temporary commit content 2693
 Temporary commit content 2703
 Temporary commit content 2709
 Temporary commit content 2716
+Temporary commit content 2719
