Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -207,3 +207,4 @@ Temporary commit content 2332
 Temporary commit content 2337
 Temporary commit content 2341
 Temporary commit content 2354
+Temporary commit content 2357
