Fixed typos in documentation

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -234,3 +234,4 @@ Temporary commit content 2623
 Temporary commit content 2625
 Temporary commit content 2648
 Temporary commit content 2661
+Temporary commit content 2663
