Fixed typos in documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -102,3 +102,4 @@ Temporary commit content 1256
 Temporary commit content 1262
 Temporary commit content 1273
 Temporary commit content 1277
+Temporary commit content 1290
