Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -118,3 +118,4 @@ Temporary commit content 1460
 Temporary commit content 1469
 Temporary commit content 1479
 Temporary commit content 1481
+Temporary commit content 1513
