Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -63,3 +63,4 @@ Temporary commit content 673
 Temporary commit content 682
 Temporary commit content 691
 Temporary commit content 708
+Temporary commit content 732
