Fixed bug in data processing script

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -97,3 +97,4 @@ Temporary commit content 1221
 Temporary commit content 1231
 Temporary commit content 1232
 Temporary commit content 1241
+Temporary commit content 1251
