Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -56,3 +56,4 @@ Temporary commit content 612
 Temporary commit content 623
 Temporary commit content 625
 Temporary commit content 656
+Temporary commit content 663
