Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -51,3 +51,4 @@ Temporary commit content 536
 Temporary commit content 542
 Temporary commit content 555
 Temporary commit content 558
+Temporary commit content 576
