Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -60,3 +60,4 @@ Temporary commit content 620
 Temporary commit content 637
 Temporary commit content 648
 Temporary commit content 650
+Temporary commit content 678
