Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -65,3 +65,4 @@ Temporary commit content 691
 Temporary commit content 708
 Temporary commit content 732
 Temporary commit content 739
+Temporary commit content 742
