Optimized database queries

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -80,3 +80,4 @@ Temporary commit content 945
 Temporary commit content 946
 Temporary commit content 985
 Temporary commit content 987
+Temporary commit content 991
