Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -89,3 +89,4 @@ Temporary commit content 980
 Temporary commit content 990
 Temporary commit content 992
 Temporary commit content 996
+Temporary commit content 1005
