Refactored code for better readability

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -204,3 +204,4 @@ Temporary commit content 2281
 Temporary commit content 2290
 Temporary commit content 2321
 Temporary commit content 2332
+Temporary commit content 2337
