Updated README with new features

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -44,3 +44,4 @@ Temporary commit content 442
 Temporary commit content 487
 Temporary commit content 493
 Temporary commit content 505
+Temporary commit content 508
