Optimized database queries

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -206,3 +206,4 @@ Temporary commit content 2321
 Temporary commit content 2332
 Temporary commit content 2337
 Temporary commit content 2341
+Temporary commit content 2354
