Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -193,3 +193,4 @@ Temporary commit content 2151
 Temporary commit content 2166
 Temporary commit content 2177
 Temporary commit content 2179
+Temporary commit content 2193
