Fixed bug in data processing script

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -261,3 +261,4 @@ Temporary commit content 2948
 Temporary commit content 2976
 Temporary commit content 2979
 Temporary commit content 2990
+Temporary commit content 2994
