Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -141,3 +141,4 @@ Temporary commit content 1562
 Temporary commit content 1563
 Temporary commit content 1571
 Temporary commit content 1587
+Temporary commit content 1589
