Updated project documentation

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -149,3 +149,4 @@ Temporary commit content 1891
 Temporary commit content 1900
 Temporary commit content 1902
 Temporary commit content 1906
+Temporary commit content 1911
