Updated README with new features

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -130,3 +130,4 @@ Temporary commit content 1633
 Temporary commit content 1655
 Temporary commit content 1656
 Temporary commit content 1695
+Temporary commit content 1712
