Added validation for user input

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -228,3 +228,4 @@ Temporary commit content 2858
 Temporary commit content 2875
 Temporary commit content 2889
 Temporary commit content 2937
+Temporary commit content 2957
