Enhanced UI responsiveness

--- a/ghjf/requirements.txt
+++ b/ghjf/requirements.txt
@@ -229,3 +229,4 @@ Temporary commit content 2531
 Temporary commit content 2535
 Temporary commit content 2579
 Temporary commit content 2599
+Temporary commit content 2606
