Refactored code for better readability

--- a/ghjf/config.json
+++ b/ghjf/config.json
@@ -216,3 +216,4 @@ Temporary commit content 2778
 Temporary commit content 2780
 Temporary commit content 2794
 Temporary commit content 2798
+Temporary commit content 2799
